--- a/i18n/pom.xml
+++ b/i18n/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>2.1.1</version>
+            <version>${jakarta.annotation-api.version}</version>
         </dependency>
         <dependency>
             <groupId>de.taimos</groupId>
